app/assets/stylesheets/ctl_base_ui/forms.scss
@import 'mixins';
@import 'colors';
@import 'icons';

label {
  cursor: pointer;
}

label.optional {
  &:after {
    content: ' (Optional)';
    font-weight: normal;
    font-style: italic;
  }
}

input[type='text'],
input[type='number'],
textarea {
  @include border-radius(0.3em);
  padding: 10px;
  font-size: 13px;
  color: $warm_grey;
  border: $warm_grey 1px solid;

  &:focus {
    color: $dark_grey;
    border-color: $dark_grey;
    outline: none;
  }
}

input[type='number'] {
  padding-right: 5px;
}

.chosen-container {
  .chosen-single {
    padding: 7px 9px;
    color: $warm_grey;
    border: $warm_grey 1px solid;
    background: $white !important;

    span {
      margin-right: 40px;
    }

    div {
      @include border-box;
      width: 30px;

      b {
        margin-top: 6px;
        background: none;
        height: 26px;
        border-left: $warm_grey 1px solid;
        position: relative;

        &:after {
          content: '';
          position: absolute;
          top: 9px;
          left: 9px;
          @extend .icon-thick-arrow-down;
        }
      }
    }
  }

  .chosen-results {
    li {
      @include border-box;
      @include border-radius(3px);
      height: 35px;
      padding-top: 10px;
      position: relative;
      padding-left: 20px;

      &.highlighted {
        background: $light_grey;
        color: $blue_grey;
      }

      &.result-selected {
        &:before {
          position: absolute;
          left: 6px;
          top: 12px;
          content: '';
          @extend .icon-checkmark;
          @include icon-green;
        }
      }
    }
  }
}

.chosen-container-active {
  .chosen-single,
  .chosen-drop {
    border-color: $blue_grey !important;
  }
}

@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 144dpi) {
  .chosen-container-single .chosen-single div b {
    background: none !important;
  }
}

